--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "swagger-to-graphql",
-  "version": "1.1.7",
+  "name": "@jwalsh/swagger-to-graphql",
+  "version": "0.0.1",
   "author": "Roman Krivtsov",
   "bin": "./bin/swagger2graphql",
   "dependencies": {
